crates/llvmkit-ir/tests/compile_fail/module_pass_requires_verified.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/module_pass_requires_verified.rs:11:25
   |
11 |         let _ = mpm.run(module, &mut mam, &mut fam);
   |                     --- ^^^^^^ expected `Module<'_, _, Verified>`, found `Module<'_>`
   |                     |
   |                     arguments to this method are incorrect
   |
   = note: expected struct `Module<'_, _, Verified>`
              found struct `Module<'_, Brand<'_>, Unverified>`
note: method defined here
  --> src/pass_manager.rs
   |
   |     pub fn run(
   |            ^^^
